index.css
@font-face {
  font-family: Arial;
  src: url(Arial.ttf);
  font-weight: normal;
}

@font-face {
  font-family: Arial;
  src: url(Arial Black.ttf);
  font-weight: bold;
}

@font-face {
  font-family: Arial Narrow Italic;
  src: url(Arial Narrow Italic.ttf);
}

@font-face {
  font-family: SerapionOSF;
  src: url(SerapionOSF.otf);
}

*, *:before, *:after {
  overflow: hidden;
  box-sizing: border-box;
}

body, html {
  height: 100%;
}

.container {
  position: relative;
  width: 100%;
  height: 100%;
  /* overflow: hidden; */
}

.dot {
  height: 65px;
  width: 50px;
  background-color: white;
  border-style: solid;
  border-color: #145A32;
  border-radius: 50%;
  display: inline-block;
}

.menu {
  width: 100%;
}

#going-back {
  position: absolute;
  width: 5vw;
  height: 100vh;

  /* background-color: red; */
}

span:hover {
  text-decoration: underline;
  cursor: pointer;
}

/* .content {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: red;
  padding: 50px;
} */

.left-door {
  background-color: white;
  top: 0;
  left: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  font-size: 5.7vw;
  padding: 25px;
  font-family: Arial;
  line-height: 1.3;
}

.right-door {
  background-color: #fff;
  position: absolute;
  width: 10vw;
  height: 100%;
  right: 0;
  top: 0;
  transition: width 0.3s ease-in-out;
  font-size: 4vw;
  padding: 20px;
  border-left: 10px solid #145A32;
  font-family: Arial;
  hyphens: auto;
  overflow: hidden;
}

.expanded {
  width: 89.5vw;
}

.panel {
  position: absolute;
  width: 100%;
  height: 100%;
  display: none;
  overflow: scroll;
  overflow-wrap: break-word;
  padding-right: 25px;
}

.panel1 {
  display: block;
  text-transform: uppercase;
  text-align: center;
  position: absolute;
  font-size: 3.6vw;
}

.expanded > .panel1 {
text-align: left;
height: 100%;
}


.footnotes-left {
  width: 100%;
  height: 80%;
  font-size: 3.7vw;
  padding-top: 20px;
  overflow: scroll;
  border-top: 10px solid #145A32;
  font-family: Arial;
  font-style: normal;
  margin-bottom: auto;
}

/* .footnotes-left::-webkit-scrollbar {
    -webkit-appearance: none;
    height: 5px;

}

.footnotes-left::-webkit-scrollbar-thumb {
    border-radius: 8px;
    border: 2px solid white;
    background-color: #145A32;
} */

.footnotes-left::-webkit-scrollbar {
    -webkit-appearance: none;
}
.footnotes-left::-webkit-scrollbar:vertical {
    width: 12px;
}
.footnotes-left::-webkit-scrollbar:horizontal {
    height: 12px;
}
.footnotes-left::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, .5);
    border-radius: 10px;
    border: 2px solid #ffffff;
}
.footnotes-left::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #ffffff;
}


/*
p .panel10 {
  background-color: white;
  overflow: overflow;
  height: 100%;
  top: 0;
  right: 0;
  font-size: 2vw;
  padding: 25px;
  border-left: 3px solid black;
  font-family: Arial Narrow;
  font-style: italic;
  line-height: 1.5;
} */


img {
  width: 100%;
  height: auto;
}

